--- a/pom.xml
+++ b/pom.xml
@@ -25,153 +25,6 @@
 
     <!--dependencyManagement：只会管理依赖，并不会给子项目使用。dependencies：全部导入-->
     <dependencyManagement>
-        <!--<dependencies>
-            &lt;!&ndash; Spring 依赖 &ndash;&gt;
-            &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-orm &ndash;&gt;
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-orm</artifactId>
-                <version>${atguigu.spring.version}</version>
-            </dependency>
-            &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-webmvc &ndash;&gt;
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-webmvc</artifactId>
-                <version>${atguigu.spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-test</artifactId>
-                <version>${atguigu.spring.version}</version>
-            </dependency>
-            &lt;!&ndash; https://mvnrepository.com/artifact/org.aspectj/aspectjweaver &ndash;&gt;
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjweaver</artifactId>
-                <version>1.9.2</version>
-            </dependency>
-            &lt;!&ndash; https://mvnrepository.com/artifact/cglib/cglib &ndash;&gt;
-            <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib</artifactId>
-                <version>2.2</version>
-            </dependency>
-            &lt;!&ndash; 数据库依赖 &ndash;&gt;
-            &lt;!&ndash; MySQL 驱动 &ndash;&gt;
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.3</version>
-            </dependency>
-            &lt;!&ndash; 数据源 &ndash;&gt;
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.0.31</version>
-            </dependency>
-            &lt;!&ndash; MyBatis &ndash;&gt;
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>3.2.8</version>
-            </dependency>
-            &lt;!&ndash; MyBatis 与 Spring 整合 &ndash;&gt;
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>1.2.2</version>
-            </dependency>
-            &lt;!&ndash; MyBatis 分页插件 &ndash;&gt;
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>4.0.0</version>
-            </dependency>
-            &lt;!&ndash; 日志 &ndash;&gt;
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.7</version>
-            </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>1.2.3</version>
-            </dependency>
-            &lt;!&ndash; 其他日志框架的中间转换包 &ndash;&gt;
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jcl-over-slf4j</artifactId>
-                <version>1.7.25</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jul-to-slf4j</artifactId>
-                <version>1.7.25</version>
-            </dependency>
-            &lt;!&ndash; Spring 进行 JSON 数据转换依赖 &ndash;&gt;
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-core</artifactId>
-                <version>2.9.8</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>2.9.8</version>
-            </dependency>
-            &lt;!&ndash; JSTL 标签库 &ndash;&gt;
-            <dependency>
-                <groupId>jstl</groupId>
-                <artifactId>jstl</artifactId>
-                <version>1.2</version>
-            </dependency>
-            &lt;!&ndash; junit 测试 &ndash;&gt;
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-                <scope>test</scope>
-            </dependency>
-            &lt;!&ndash; 引入 Servlet 容器中相关依赖 &ndash;&gt;
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>2.5</version>
-                <scope>provided</scope>
-            </dependency>
-            &lt;!&ndash; JSP 页面使用的依赖 &ndash;&gt;
-            <dependency>
-                <groupId>javax.servlet.jsp</groupId>
-                <artifactId>jsp-api</artifactId>
-                <version>2.1.3-b06</version>
-                <scope>provided</scope>
-            </dependency>
-            &lt;!&ndash; https://mvnrepository.com/artifact/com.google.code.gson/gson &ndash;&gt;
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.8.5</version>
-            </dependency>
-            &lt;!&ndash; SpringSecurity 对 Web 应用进行权限管理 &ndash;&gt;
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
-            &lt;!&ndash; SpringSecurity 配置 &ndash;&gt;
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
-            &lt;!&ndash; SpringSecurity 标签库 &ndash;&gt;
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-taglibs</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
-        </dependencies>-->
 
         <dependencies>
             <!-- Spring依赖 -->
@@ -246,6 +99,16 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.7</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.1.7</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-access</artifactId>
+                <version>1.1.7</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
